--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ dotenvy = "0.15.7"
 reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
-sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls", "runtime-tokio", "chrono", "uuid"] }
+sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls", "runtime-tokio", "chrono", "uuid", "json"] }
 tokio = { version = "1.35.1", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.5.1", features = ["trace"] }
